[package]
name = "rust-cross"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = { path = "../sp1/zkvm/entrypoint", version = "0.1.0" }
# serde = { version = "1.0.195", features = ["derive"] }
serde = { version = "1.0.202", features = ["derive"] }
# serde_json = "1.0.99"
# serde_json = { version = "1.0.117" }
# serde_json = { path = "/home/semar/.cargo/registry/src/index.crates.io-6f17d22bba15001f/serde_json-1.0.117", version = "1.0.117" }
serde_json = { path = "../serde-json", version = "1.0.117" }
# serde_json = { version = "1.0.117", default-features = false, features = ["alloc"] }
anyhow = "1.0.82"
rand = "0.8.5"
# hf-hub = "0.3.0"
include_bytes_aligned = "0.1.3"
candle = { path = "../candle/candle-core", package = "candle-core", version = "0.5.0" }
candle-nn = { path = "../candle/candle-nn", version = "0.5.0" }
candle-transformers = { path = "../candle/candle-transformers", version = "0.5.0" }
candle-datasets = { path = "../candle/candle-datasets", version = "0.5.0", optional = true }
tokenizers = { path = "../tokenizers/tokenizers", version = "0.19.1-dev.0", default-features = false, features = [
	"fancy-regex",
] }

[profile.release]
opt-level = 3
# opt-level = "z"

[features]
default = []
local = ["candle-datasets"]
